working on localhost with error handeling
