# controllers/users.js
@@ -1,0 +1,94 @@
+const mongodb = require('../db/connect');
+const ObjectId = require('mongodb').ObjectId;
+
+const getAll = async (req, res) => {
+  const result = await mongodb.getDb()
+  .db()
+  .collection('users')
+  .find()
+  .toArray((err, lists) => {
+    if (err) {
+      res.status(400).json({ message: err });
+    }
+  res.setHeader('Content-Type', 'application/json');
+  res.status(200).json(lists[0]);
+});
+};
+
+const getSingle = async (req, res) => {
+  const userId = new ObjectId(req.params.id);
+  const result = await mongodb
+    .getDb()
+    .db()
+    .collection('users')
+    .find({ _id: userId });
+  result.toArray().then((lists) => {
+    res.setHeader('Content-Type', 'application/json');
+    res.status(200).json(lists[0]);
+  });
+};
+
+const createUser = async (req, res) => {
+  const users = {
+    
+    firstName: req.body.firstName,
+    lastName: req.body.lastName,
+    email: req.body.email,
+    streetAddress: req.body.streetAddress,
+    zipCode: req.body.zipCode,
+    birthday: req.body.birthday,
+    favoriteFood: req.body.favoriteFood
+
+  };
+  const response = await mongodb.getDb().db().collection('users').insertOne(users);
+  if (response.acknowledged) {
+    res.status(201).json(response);
+  } else {
+    res.status(500).json(response.error || 'Some error occurred while creating the recipe.');
+  }
+};
+
+const updateUser = async (req, res) => {
+  const userId = new ObjectId(req.params.id);
+  // be aware of updateOne if you only want to update specific fields
+  const user = {
+    
+    firstName: req.body.firstName,
+    lastName: req.body.lastName,
+    email: req.body.email,
+    streetAddress: req.body.streetAddress,
+    zipCode: req.body.zipCode,
+    birthday: req.body.birthday,
+    favoriteFood: req.body.favoriteFood
+  };
+  const response = await mongodb
+    .getDb()
+    .db()
+    .collection('users')
+    .replaceOne({ _id: userId }, user);
+  console.log(response);
+  if (response.modifiedCount > 0) {
+    res.status(204).send();
+  } else {
+    res.status(500).json(response.error || 'Some error occurred while updating the user.');
+  }
+};
+
+const deleteUser = async (req, res) => {
+  const userId = new ObjectId(req.params.id);
+  const response = await mongodb.getDb().db().collection('users').remove({ _id: userId }, true);
+  console.log(response);
+  if (response.deletedCount > 0) {
+    res.status(204).send();
+  } else {
+    res.status(500).json(response.error || 'Some error occurred while deleting the user.');
+  }
+};
+
+module.exports = {
+  getAll,
+  getSingle,
+  createUser,
+  updateUser,
+  deleteUser
+};
